--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@ containers
 rstudio
 raycast
 tfenv
+swarm-tools
+
+.claude/plans
+.claude/plugins
+.claude/projects
+.claude/cache
+.claude/debug
+.claude/file-history
+.claude/shell-snapshots
+.claude/todos
+.claude/telemetry
+.claude/session-env
+.claude/statsig
+.claude/history.jsonl
+.claude/stats-cache.json
